# Cache

./: .gitignore  CMakeLists.txt  README.md  main.c  res_compare.csv
include/: cache.h  hash.h  list.h  queue.h  test_func.h  tree.h
problem_lc/: CMakeLists.txt  LC.c  LCmain.c  makefile
problem_lc/include/: cache.h  hash.h  list.h
problem_lc/source/: cache.c  hash.c  list.c
source/: cache.c  cache_mod.c  cache_version2.c  hash.c  hash.cpp  list.c  queue.c  test_func.c  tree.c
tests/: cache_compare.c  cache_test.c  makefile  test_cache.c  test_generator.c  test_hash  test_hash.c  test_list.c
tests/resourses/: test1.ans  test1data.txt  test2.ans  test3.ans  test4.ans  test5.ans
tests/results/: .~lock.graph3.csv#  .~lock.graph4.csv#  example.csv  graph1.csv  graph2.csv  graph3.csv  graph4.csv  graph5.csv  graph6.csv  graph7.csv  graph8.csv  test_fluct_length_10.csv  test_fluct_length_100.csv  test_fluct_length_1000.csv  test_fluct_length_10000.csv  test_fluct_length_100000.csv  test_fluct_length_1000000.csv  test_random_length_10.csv  test_random_length_100.csv  test_random_length_1000.csv  test_random_length_10000.csv  test_random_length_100000.csv  test_random_length_1000000.csv  test_saw_length_10.csv  test_saw_length_100.csv  test_saw_length_1000.csv  test_saw_length_10000.csv  test_saw_length_100000.csv  test_saw_length_1000000.csv
